app/styles/edit.scss
button, .btn {
  border: none !important;
}
.toggle-buttons{background-color:#212121 !important; padding:1px 3px !important; color:#BEBEBE !important}
.toggle-buttons:hover{color:#2196F3 !important}
.add-buttons{background-color:#424242 !important; padding:1px 3px !important; color:#dcdcdc !important}
.add-buttons:hover{color:#00a6e5 !important}
.saved-list-buttons{background-color:#eee !important; padding:0px 3px !important; color:#424242 !important; font-size:18px!important; line-height:1 !important}
.saved-list-buttons:hover{color:#00a6e5 !important}
.create-new-concept{background-color:#00a6e5 !important; text-align:left !important; color:#fff !important; font-size:14px!important; padding:13px !important; line-height:1 !important}
.create-new-concept:hover{background-color:#039be5 !important; text-align:left !important; color:#fff !important; font-size:14px!important; }
.create-new-concept i{font-size:17px!important; }
.savedlist-buttons{width:50px;}
.color_[disabled]{background-color:#303030 !important; color: #BBDEFB !important; border-bottom:none !important}
.color_0[disabled]{background-color:#303030 !important; color: #f8bbd0 !important; border-bottom:none !important}
.no-padding-left{padding-left:0px !important;}
.no-padding-right{padding-right:0px !important;}
.create-links:after {
  content: "\f1ed";
  color: #4fc3f7;
  display: inline-block;
  font: normal normal normal 14px/1 'Material Design Iconic Font';
  speak: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  position: absolute;
  right: 5px;
  top: 18px;
  font-size: 22px;
}
// responsive begins
@media screen and (max-width: 1850px) {
  .editing-form {
    button, .btn {
      border: 0px;
      font-size: 15px;
      padding: 1px 4px;
      line-height: 1.346;
      margin-top: 4px;
    }
    input, textarea, select {
      font-size: 11px !important;
      height: 30px !important;
    }
  }
  .form-control {
    height: 30px;
  }
  .title-text {
    font-size: 11px;
    padding: 5px;
  }
}

@media screen and (min-width: 1851px) {
  .editing-form {
    button, .btn {
      border: 0px;
      font-size: 20px;
      padding: 1px 8px;
      line-height: 1.846;
      margin-bottom: 0px;
    }
    input, textarea, select {
      font-size: 12px !important;
    }
  }
  .form-control {
    height: 37px !important;
  }
  .title-text {
    font-size: 12px;
    padding: 10px;
  }
}
// responsive ends
.editpanel {
  background-color: #eee !important;
  color: #737373 !important;
  a {
    color: #666;
  }
}

aside.editpanel ul a {
  padding: 12px;
  color: #737373 !important;
}

.editpanel {
  .icon-color {
    width: 35px;
    height: 35px;
    font-size: 20px !important;
    line-height: 35px !important;
  }
  .btn {
    
  }
}
.editpanel .btn:hover {
  box-shadow:none;
}

.editbuttons {
  font-size: 20px;
  padding: 0px 7px;
  box-shadow:none!important;
}

.popover {
  select.form-control {
    background-color: #fff;
    padding: 5px 20px 5px 15px;
    font-size: 12px;
    margin: 5px;
  }
  max-width: 400px;
  min-width: 350px;
}

.editform .row {
  margin: 0px;
}
.formcontrol{font-size:12px;}

.editpanel .btn {

}
//Taxonomy tab button styling
.widget-toolbar {
  padding-right: 10px;
  padding-left: 10px;
  font-size: 20px;
  box-shadow: none;
  width: 38px;
  line-height: 35px;
  &:hover {
    background-color: transparent;
    color: #424242;
  }
}
//Taxonomy Styling

#bp-taxonomy_canvas-panelBody {
  height: 100%;
}

#bp-taxonomy_canvas-panelBody ul {
  padding: 0;
}


#bp-taxonomy_canvas-mainPanel {
  height:100%;
  margin: 5px 5px 5px 0;
  padding: 5px;
  overflow:auto;
  box-shadow:none;
}

#bp-taxonomy_canvas-mainPanel ul ul a {
  padding: 0;
  font-weight: 400;
}

#bp-taxonomy_canvas-mainPanel ul ul a:hover{
  font-weight:500
}

#bp-taxonomy_canvas-mainPanel ul a {
  display: inline;
  padding: 0;
}

#bp-taxonomy_canvas-mainPanel i {
  color: #00a4e4;
  font-size: 10px;
}

.alert-warning {
    background-color: #ffd54f;
    border-color: none;
    color: #8A6D3B;
}

.badge {
    display: inline-block;
    min-width: 10px;
    padding: 3px 7px;
    font-size: 10px;
    font-weight: bold;
    color: #FFF;
    line-height: 1;
    vertical-align: baseline;
    white-space: nowrap;
    text-align: center;
    background-color: transparent;
    border-radius: 10px;
}
.search-button {
  font-size: 18px;
  box-shadow: none;
  &:hover {
    font-size: 18px;
    box-shadow: none;
    background-color: transparent;
    color: #ffc107;
  }
}
.alert-warning {
    color: black;
    background-image: linear-gradient(to bottom, #ffecb3 0px, #ffe082 100%);
    background-repeat: repeat-x;
    border-color: #F5E79E;
}

#bp-taxonomy_canvas-mainPanel .treeButton {
    height: 20px;
    font-size: 12px;
    vertical-align: middle;
}

#bp-taxonomy_canvas-mainPanel .treeButton:hover {
    background-color: #e6e6e6;
    color:#424242;
    text-transform: none;
}

#bp-taxonomy_canvas-mainPanel .treeLabel {
  font-size: 12px;
  padding: 0;
  margin: 0;
  list-style: none;
}
.widget-button {
  font-size: 18px;
  box-shadow: none;
  &:hover {
    font-size: 18px;
    box-shadow: none;
    background-color: #424242;
    color: #fff;
  }
}
/* ... */

